--- a/index.html
+++ b/index.html
@@ -126,11 +126,12 @@
     </div>
 
     <div style="margin-top: 10px; text-align: center;">
-        <a href="https://maps.app.goo.gl/9ZpL9tXfXn2uM8Lh9" target="_blank" 
-           style="display: inline-block; background-color: #25d366; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-            📍 ગૂગલ મેપ પર જુઓ (માર્સેલા હોમ્સ)
-        </a>
-    </div>
+    <a href="https://maps.app.goo.gl/T6c59PsqubuZfsqPA?g_st=aw" target="_blank" 
+       style="display: inline-block; background-color: #25d366; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+        📍 ગૂગલ મેપ પર જુઓ (માર્સેલા હોમ્સ)
+    </a>
+</div>
+
 </div>
     
     </div>
@@ -234,4 +235,5 @@
     };
 </script>	
 </body>
+
 </html>
