--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <h3>તમારું બુકિંગ કરો</h3>
         <form id="bookForm">
             <label>તમારું નામ:</label>
+			<label>હસ્તક નુ નામ</label>
             <input type="text" id="name" placeholder="તમારું નામ લખો" required>
 
             <label>તારીખ પસંદ કરો:</label>
@@ -140,7 +141,7 @@
 </div>
 
 <footer>
-    <p>સંપર્ક: ‪+91 9081209362‬ | લોકેશન: માર્સેલા હોમ્સ , સુરત , ગુજરાત</p>
+    <p>સંપર્ક: ‪+91  99241 34113‬ | લોકેશન: માર્સેલા હોમ્સ , સુરત , ગુજરાત</p>
     <p>Design By Kamdhenu</p>
 </footer>
 
@@ -212,7 +213,7 @@
                     alert("✅ અભિનંદન " + name + "!\nતમારી બુકિંગ વિગતો સેવ થઈ ગઈ છે.");
                     
                     // WhatsApp એપ ખોલવી
-                    window.location.href = `https://wa.me/919081209362?text=${whatsappMsg}`;
+                    window.location.href = `https://wa.me/919924134113?text=${whatsappMsg}`;
                     
                     // ફોર્મ ક્લિયર કરવું
                     document.getElementById('bookForm').reset();
@@ -237,3 +238,4 @@
 </body>
 
 </html>
+
